# girlvoice-gateware

./: .env.toolchain  .gitignore  README.md  enter_container.sh  init_params.txt  pyproject.toml  pyvenv.cfg
girlvoice/: i2s.py  lifcl_evn_top.py  nexus_i2c.py  stream.py  top.py
girlvoice/breadboard/: top.py
girlvoice/dsp/: bandpass_fir.py  bandpass_iir.py  envelope.py  envelope_vga.py  sine_synth.py  tdm_slice.py  utils.py  vga.py  vocoder.py
girlvoice/dsp/gtkw/: BandpassFIR.gtkw  BandpassIIR.gtkw  BandpassIIR_TDMMult.gtkw  EnvelopeFollower.gtkw  ParallelSineSynth.gtkw  TDMMultiply.gtkw
girlvoice/dsp/litex/: vocoder.py
girlvoice/dsp/tests/: amen_bp.py  amen_code_16ch.py  amen_code_1_ch.py  amen_code_4ch.py  amen_envelope.py  bandpass_env.py  bandpass_impulse.py
girlvoice/dsp/tests/gtkw/: BandpassIIR.gtkw  StaticVocoder.gtkw
girlvoice/gtkw/: I2S_Rx.gtkw
girlvoice/io/: envelope_csr.py  gpi.py  i2c.py  i2s.py  nexus_i2c.py  spi.py
girlvoice/platform/: girlvoice_rev_a.py  lifcl_evn.py
girlvoice/platform/litex/: girlvoice_rev_a.py
girlvoice/platform/nexus_utils/: i2c_fifo.py  lmmi.py  lmmi_am.py  lram.py  pll.py
girlvoice/platform/test/: girlplat_test.py
girlvoice/soc/: girlvoice_soc.py
girlvoice/soc/provider/: girlvoice_rev_a.py
girlvoice/software/: .gitignore
girlvoice/software/aw88395/: .gitignore  Cargo.toml
girlvoice/software/aw88395/src/: lib.rs  regmap.rs
girlvoice/software/girlvoice/: Cargo.toml  README.md  build.rs  memory.x
girlvoice/software/girlvoice/.cargo/: config  config.toml  flash.sh
girlvoice/software/girlvoice/src/: i2c.rs  i2c_fifo.rs  led.rs  main.rs  print.rs  spi.rs  term.rs  timer.rs
girlvoice/software/girlvoice/src/ui/: CHANGELOG.md  math.rs  mod.rs  vis.rs
girlvoice/software/hal/: Cargo.toml
girlvoice/software/hal/src/: gpio.rs  i2c.rs  lib.rs  serial.rs  spi.rs  timer.rs
girlvoice/software/litex-pac/: Cargo.toml  build.rs  device.x  girl.svd  girlsoc.svd  lib.rs
girlvoice/software/litex-pac/src/: lib.rs
girlvoice/software/sgtl5000/: Cargo.toml
girlvoice/software/sgtl5000/src/: lib.rs  regmap.rs
girlvoice/software/soc-pac/: Cargo.toml  device.x  girlsoc.svd  i2c.svd
girlvoice/software/soc-pac/src/: lib.rs
girlvoice/stream/: __init__.py
girlvoice/targets/: .gitignore  girl.svd  girlsoc_target.py  girlvoice_litex.py  girlvoice_target.py  lifcl_evn_top.py
girlvoice/targets/build.old/: build_top.bat  build_top.sh  promote.xml  radiantc.log.18  radiantc.log.19  radiantc.log.19.bak  radiantc.log.30  radiantc.log.31  top.pdc  top.rdf  top.sdc  top.tcl  top1.sty
girlvoice/targets/build.old/impl/: .build_status  _CMD_COMPILER.CML  _CMD_MULTI_SRS_GEN.CML  _cmd._cml  beforemap.srs  message_log.xml  project_rtls.txt  rpt_top_areasrr.htm  run_options.txt  scratchproject.prs  stdout.log.bak  stdout.log.bak.1  stdout.log.bak.2  stdout.log.bak.3  stdout.log.bak.4  stdout.log.bak.5  stdout_job.log.bak  stdout_job.log.bak.1  stdout_job.log.bak.2  stdout_job.log.bak.3  stdout_job.log.bak.4  stdout_job.log.bak.5  synlog.tcl  top_impl.areasrr  top_impl.bgn  top_impl.bit  top_impl.fea  top_impl.htm  top_impl.ldc  top_impl.mrp  top_impl.mrp.html  top_impl.p2t  top_impl.pad  top_impl.par  top_impl.pwrprd  top_impl.srd  top_impl.srr  top_impl.srr.db  top_impl.srs  top_impl.t2b  (+15 more)
girlvoice/targets/build.old/impl/dm/: layer0.xdm
girlvoice/targets/build.old/impl/incr/: postmap.udb  postpar.udb  postsyn.udb
girlvoice/targets/build.old/impl/synlog/: hierarea.rpt.rptmap  syntax_constraint_check.rpt.rptmap  top_impl_comp.rt.csv.rptmap  top_impl_compiler.srr  top_impl_compiler.srr.db  top_impl_compiler.srr.rptmap  top_impl_fpga_mapper.srr  top_impl_fpga_mapper.srr.db  top_impl_fpga_mapper.szr  top_impl_multi_srs_gen.srr  top_impl_premap.srr  top_impl_premap.srr.db  top_impl_premap.szr  top_impl_premap.xck
girlvoice/targets/build.old/impl/synlog/report/: metrics.db  top_impl_compiler_notes.txt  top_impl_compiler_runstatus.xml  top_impl_compiler_warnings.txt  top_impl_fpga_mapper_area_report.xml  top_impl_fpga_mapper_notes.txt  top_impl_fpga_mapper_resourceusage.rpt  top_impl_premap_combined_clk.rpt  (+7 more)
girlvoice/targets/build.old/impl/syntmp/: MULT18X18.fdep  MULT18X18.log.db  MULT18X18.tlg  MULT18X18.tlg.db  MULT18X36.fdep  MULT18X36.log.db  MULT18X36.tlg  MULT18X36.tlg.db  run_option.xml  statusReport.html  stdout_log.htm  top_impl.plg  top_impl_cck_rpt.htm  top_impl_cck_rpt.tgl  top_impl_srr.htm  top_impl_toc.htm  top_impl_twr.htm  traplog.tlg  traplog.tlg.db  vhdlsyn18712LH7fF_top_wrapper.vhd  vhdlsyn187145vLH3_top_wrapper.vhd  vhdlsyn18719RiVNl_top_wrapper.vhd  vhdlsyn1871A7zzXA_top_wrapper.vhd  vhdlsyn1871FRKtc5_top_wrapper.vhd  vhdlsyn1871L2FiGk_top_wrapper.vhd  vhdlsyn1871RSqF7x_top_wrapper.vhd  vhdlsyn1871Ri3ZTI_top_wrapper.vhd  vhdlsyn1871YwfDow_top_wrapper.vhd  vhdlsyn1871gA37o7_top_wrapper.vhd  vhdlsyn1871hCwBOX_top_wrapper.vhd  vhdlsyn1871lOQ9QC_top_wrapper.vhd  vhdlsyn1871p0HRVh_top_wrapper.vhd  vhdlsyn1871qHWCFd_top_wrapper.vhd  vhdlsyn1871xbNbbb_top_wrapper.vhd  vhdlsyn24790qMgSh_top_wrapper.vhd  vhdlsyn2479KNTow7_top_wrapper.vhd  vhdlsyn2479R3jk0d_top_wrapper.vhd  vhdlsyn2479fC0egO_top_wrapper.vhd  vhdlsyn2479jeyIGi_top_wrapper.vhd  vhdlsyn2479nZOkBb_top_wrapper.vhd  (+102 more)
girlvoice/targets/build.old/impl/synwork/: .cckTransfer  .layer0.srs_dep  _slc_mhdlc  _verilog_hintfile  compile_only.schmap  incr_compile.rpt  layer0.duruntime  layer0.fdep  layer0.srs  layer0.tlg  layer0.tlg.db  modulechange.db  top_impl_comp.fdep  top_impl_comp.rt.csv  top_impl_comp.srs  top_impl_m.srm  top_impl_mult.gcr  top_impl_prem.fse  top_impl_prem.srd  top_impl_prem.srm  usedRTLs.fdep
girlvoice/targets/build.old/impl/top_impl_par.dir/: 5_1.par
girlvoice/targets/golden/: girlvoice_rev_a_i2s_passthrough.bit
girlvoice/targets/simulation/: .gitignore  Makefile  girlvoice_soc.v  sim_soc.py
girlvoice/vsrc/: Makefile
girlvoice/vsrc/i2s/: circular_buff.v  clkdiv.v  i2s_deserial.v  i2s_mirror.v  i2s_serial.v
girlvoice/vsrc/vocoder/: Makefile  fir_highpass.v  fir_highpass_tb.py  fir_lowpass.v  fir_lowpass_tb.py  fir_tap.v  multiplier.v
(+12 files in other folders)
