[project]
name = "girlvoice"
version = "0.1.0"
description = "A real-time vocoder and more!"
authors = [
    {name = "Sage Walker", email = "sage@caesium.dev"},
]
dependencies = [
    "amlib @ git+https://github.com/amaranth-farm/amlib.git",
    "amaranth==0.5.4",
    "amaranth-boards @ git+https://github.com/amaranth-lang/amaranth-boards.git",
    "yowasp-nextpnr-nexus>=0.7.0.0.post519",
    "yowasp-yosys>=0.40.0.0.post707",
    "meson>=1.4.0",
    "ninja>=1.11.1.1",
    "matplotlib>=3.9.1.post1",
    "scipy>=1.14.1",
    "numpy>=2.2.1",
    "amaranth-soc @ git+https://github.com/amaranth-lang/amaranth-soc@5c43cf58f15d9cd9c69ff83c97997708d386b2dc",
    "luna-usb>=0.2.0",
    "luna-soc @ git+https://github.com/greatscottgadgets/luna-soc.git@7fa1cc16ddbaf8608efa515efc7f4ef32454299c",
    "cocotb>=2.0.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
'_'.env_file = ".env.toolchain"
build = {cmd = "python girlvoice/targets/girlsoc_target.py --keep-files --toolchain radiant --dry-run"}
flash = {cmd = "iceprog girlvoice/targets/build/impl/top_impl.bit"}

[tool.ruff]
line-length = 100
select = ["E4", "E7", "E9", "F"]
ignore = []