[package]
name = "girlvoice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0"
fugit = "0.3.7"
hex = { version = "0.4.3", default-features = false}
litex-hal = "0.4.0"
litex-pac = { path = "../litex-pac", features = ["rt", "critical-section"] }
panic-halt = "0.2.0"
riscv = {version = "0.11.1" }
riscv-rt = "0.12.2"

aw88395 = { path = "../aw88395" }
gc9a01-rs = "0.4.2"
