[package]
name = "girlvoice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0"
fugit = "0.3.7"
hex = { version = "0.4.3", default-features = false}
# litex-hal = { version = "0.4.0", features = ["gpio"] }
litex-hal = { path = "/home/sage/programming_stuff/sage/rust-litex-hal" }
# litex-pac = { path = "../litex-pac", features = ["rt", "critical-section"] }
soc-pac = { path = "../soc-pac", features = ["rt", "critical-section"] }
girlvoice-hal = { path = "../hal" }
panic-halt = "1.0.0"
riscv = {version = "0.11.1" }
riscv-rt = "0.12.2"

aw88395 = { path = "../aw88395" }
sgtl5000 = { path = "../sgtl5000" }
gc9a01-rs = "0.4.2"
display-interface-spi = "0.5.0"
embedded-io = "0.6.1"
embedded-graphics = "0.8.1"
fixedstr = {version = "0.5.9", features = ["no-alloc"]}
