[package]
name = "litex-pac"
version = "0.1.0"
edition = "2021"

[dependencies]
critical-section = {version = "1.1.2", optional = true}
riscv = {version = "0.11.1", features = ["critical-section-single-hart"] }
riscv-rt = { version = "0.12.2", optional = true }
vcell = "0.1.0"

[features]
rt = ["riscv-rt"]
# critical-section = ["riscv/critical-section-single-hart"]