[package]
name = "litex-pac"
version = "0.1.0"
edition = "2021"

[dependencies]
critical-section = {version = "1.1.2", optional = true}
riscv = {version = "0.11.1", features = ["critical-section-single-hart"] }
riscv-rt = { version = "0.12.2", optional = true }
# svd2rust = "0.33.3"
vcell = "0.1.3"

[features]
rt = ["riscv-rt"]
